# manytask

./: .course.example.yml  .deadlines.example.yml  .deepsource.toml  .dockerignore  .env.common.example  .env.example  .env.production.example  .gitignore  .manytask.example.yml  .pre-commit-config.yaml  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  Dockerfile-docs  LICENSE  Makefile  QUICKSTART.md  README.md  VERSION  common.example.yml  curl_for_create_course.example  deadlines_example.yml  docker-compose.development.yml  docker-compose.docs.yml  docker-compose.local.development.yml  docker-compose.override.yml  docker-compose.production.sourcecraft.yml  docker-compose.production.yml  docker-compose.sourcecraft.development.yml  docker-compose.sourcecraft.devstand.yaml  docker-compose.yml  example_curl_score.sh  init-db.sh  pyproject.toml  requirements.test.txt  requirements.txt  setup.cfg
.github/: auto-assign.yml  dependabot.yml  release-drafter.yml
.github/workflows/: auto-assign-reviewers.yml  course-template.yml  deploy.yaml  docs.yml  publish.yml  release-drafter.yml  reusable-docker-build-push.yml  semgrep.yml  sync-pr.yml  team-pr-reviewers.yml  test.yml
.roo/: mcp.json
.run/: dev.run.xml  format.run.xml  lint.run.xml  manytask.run.xml  pytest in tests.run.xml
app/: config.py  main.py
app/api/: courses.py  dependencies.py  health.py  metrics.py
app/checklist/: factory.py  publish.py  run_step.py  runner.py
app/hosting/: __init__.py  factory.py  gitlab_adapter.py  models.py  protocol.py
app/manytask/: __init__.py  client.py  errors.py  protocol.py
app/models/: __init__.py  course_config.py
app/observability/: __init__.py  logging.py
app/storage/: __init__.py  (+2 more)
checker/: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  Makefile  README.md  VERSION  mkdocs.yml  pyproject.toml
checker/.github/: dependabot.yml
checker/.github/workflows/: publish.yml  test.yml
checker/checker/: __init__.py  __main__.py  course.py  exceptions.py  exporter.py  models.py  pipeline.py  tester.py  utils.py
checker/checker/configs/: __init__.py  checker.py  manytask.py  utils.py
checker/checker/plugins/: __init__.py  aggregate.py  base.py  checker_reporter.py  copy_files.py  cpp_build.py  cpp_clang_format.py  cpp_clang_tidy.py  cpp_crash_me.py  cpp_flag.py  cpp_forbidden.py  cpp_run_benchmarks.py  cpp_run_tests.py  firejail.py  gitlab.py  manytask.py  python.py  regex.py  run_script_with_score.py  scripts.py
checker/checker/plugins/cpp/: blacklist.py
checker/docs/: 0_concepts.md  1_getting_started.md  2_configuration.md  3_plugins.md  4_pipelines.md  5_usage.md  6_development.md  7_changelog.md  ignore_me__production.md  ignore_me__system_setup.md  index.md
checker/tests/: conftest.py  test_conftest.py  test_course.py  test_exporter.py  test_pipeline.py  test_resolver.py  test_tester.py  test_utils.py
checker/tests/configs/: test_config_utils.py  test_manytask.py  test_manytask_configs.py
checker/tests/plugins/: test_aggregate.py  test_firejail.py  test_load_plugins.py  test_manytask.py  test_manytask_plugins.py  test_regex.py  test_run_script_with_score.py  test_scripts.py
compose/: docker-compose.development.yml  docker-compose.production.yml  docker-compose.proxy.yml  docker-compose.sourcecraft.development.yml  docker-compose.sourcecraft.devstand.yaml  docker-compose.sourcecraft.production.yml
configs/: nginx.conf  nginx_server.conf
course-template/: .checker.yml  .gitignore  .gitlab-ci.yml  .manytask.yml  .releaser-ci.yml  README.md  deploy.sh  pyproject.toml  testenv.docker
docs/: .yfm  Dockerfile  Makefile  about.md  api.md  basic_example.md  checker.md  checker_pipelines_and_plugins.md  checker_plugins.md  checker_yml_reference.md  concepts.md  course_as_code.md  course_statuses.md  course_template.md  deadline_schedule.md  deploy_guide.md  dev.md  dev_setup.md  docker-compose.production.yml  grading.md  index.yaml  local_development.md  local_oauth_flow.md  manytask_config.md  manytask_yml.md  manytask_yml_reference.md  plan_2025_fall.md  plan_25.2.md  plan_26.1.md  private_repo.md  production.md  running_course.md  strategy.md  system_setup.md  toc.yaml  using_manytask.md
manytask/: .dockerignore  .env.example  .gitignore  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  Makefile  __init__.py  abstract.py  alembic.ini  api.py  auth.py  codecov.yml  config.py  config_loader.py  course.py  database.py  database_utils.py  deadlines.py  docker-compose.development.yml  docker-compose.production.yml  docker-compose.sourcecraft.development.yml  docker-compose.sourcecraft.production.yml  gdoc.py  glab.py  local_config.py  main.py  memory_rms.py  mock_auth.py  mock_rms.py  models.py  pyproject.toml  role.py  solutions.py  sourcecraft.py  table.py  test-course-config.yml  utils.py  web.py  yandex_auth.py  (+1 more)
mr-reviewer/: .dockerignore  .pre-commit-config.yaml  Dockerfile  Makefile  README.md  docker-compose.development.yml  docker-compose.production.yml  pyproject.toml
scripts/: check_staged.sh  setup_local_gitlab.sh  start_local_dev.sh
terraform/: README.md  dns.tf  gitlab.tf  main.tf  manytask.tf  network.tf  outputs.tf  postgresql.tf  terraform.tfvars.example  variables.tf  versions.tf
tests/: .deadlines.test.yml  .deadlines.test2.yml  .manytask.test.yml  _fakes.py  conftest.py  constants.py  test_abstract.py  test_api.py  test_api_courses.py  test_auth.py  test_checklist_forbidden_files.py  test_checklist_pipeline_passed.py  test_checklist_publish.py  test_checklist_result.py  test_checklist_runner.py  test_config_worker.py  test_course.py  test_course_api.py  test_database.py  test_database_utils.py  test_db_api.py  test_deadlines.py  test_dummy.py  test_gdoc.py  test_gitlab_retry.py  test_glab.py  test_healthz.py  test_hosting_anchor.py  test_hosting_gitlab_adapter.py  test_hosting_models.py  test_main.py  test_manytask_client.py  test_manytask_report.py  test_memory_rms.py  test_mock_rms.py  test_models.py  test_models_course_config.py  test_namespace_api.py  test_observability_logging.py  test_observability_metrics.py  (+7 more)
(+241 files in other folders)
