[project]
name = "manytask"
version = "25.2"
description = "Manytask system"
readme = "README.md"
requires-python = "==3.14.0"
dependencies = [
    "gunicorn==23.0.0",
    "flask==3.1.1",
    "cachelib==0.13.0",
    "werkzeug==3.1.3",
    "sqlalchemy>=2.0.44,<3.0.0",
    "psycopg2-binary==2.9.10",
    "gspread>=5.0.0,!=6.0.0,<7.0.0",
    "python-gitlab==6.4.0",
    "authlib==1.6.5",
    "python-dotenv==1.1.0",
    "pyyaml==6.0.1",
    "requests==2.32.4",
    "pydantic>=2.12",
    "pytz>=2022.0,<2023.4; python_version < '3.9'",
    "alembic==1.17.0",
    "flask-wtf>=1.2.2",
]


[project.optional-dependencies]
dev = [
    "ruff==0.14.0",
    "mypy==1.18.2",
    "types-requests==2.32.0.20240907",
    "types-PyYAML==6.0.12.12",
    "pytest==8.4.0",
    "pytest-cov==7.0.0",
    "pre-commit==4.3.0",
    "testcontainers==4.13.0",
    "bs4>=0.0.2",
    "pytest-xdist>=3.8.0",
]

[tool.mypy]
no_incremental = true
ignore_missing_imports = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
disallow_subclassing_any = true
disallow_any_generics = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_unreachable = true
allow_untyped_decorators = true
exclude = [
    "tests/",
    ".tmp/",
    ".venv/",
    "manytask/migrations/versions"
]


[tool.pyright]
include = ["manytask"]
exclude = [
    "**/node_modules",
    "**/__pycache__",
    ".venv",
    "venv",
    ".tmp",
    "tests"
]


[tool.pytest.ini_options]
minversion = "6.0"
python_files = "test_*.py"
addopts = "--cov=manytask/ --cov-report=term-missing tests/"
testpaths = [
    "tests",
    ".tmp"
]


[tool.ruff]
line-length = 120
target-version = "py312"
src = ["manytask", "tests"]

# Exclude patterns
exclude = [
    ".bzr",
    ".direnv",
    ".eggs",
    ".git",
    ".git-rewrite",
    ".hg",
    ".mypy_cache",
    ".nox",
    ".pants.d",
    ".pytype",
    ".ruff_cache",
    ".svn",
    ".tox",
    "*.ipynb",
    ".venv",
    "__pypackages__",
    "_build",
    "buck-out",
    "build",
    "dist",
    "node_modules",
    "venv",
    ".tmp",
    "manytask/migrations/versions"
]

[tool.ruff.lint]
# Combine both configurations' rules
select = ["E", "F", "I", "TID252", "TID253", "C901", "PLR"]
ignore = []

# Allow autofix for all enabled rules (when `--fix`) is provided.
fixable = ["ALL"]
unfixable = []

[tool.ruff.lint.mccabe]
# Maximum cyclomatic complexity allowed
max-complexity = 15

[tool.ruff.lint.pylint]
max-nested-blocks = 5
max-args = 7

[tool.ruff.lint.isort]
known-first-party = ["manytask", "tests"]
