[project]
name = "manytask"
version = "25.2"
description = "Manytask system"
readme = "README.md"
requires-python = ">=3.12,<4.0"
dependencies = [
    "alembic==1.17.0",
    "authlib==1.6.5",
    "gunicorn==23.0.0",
    "flask==3.1.1",
    "flask-wtf>=1.2.2",
    "psycopg2-binary>=2.9.11",
    "pydantic>=2.12",
    "python-dotenv==1.1.0",
    "python-gitlab==6.4.0",
    "pyyaml==6.0.1",
    "requests==2.32.4",
    "sqlalchemy>=2.0.44,<3.0.0",
    "werkzeug==3.1.3",
]


[project.optional-dependencies]
dev = [
    "ruff==0.14.0",
    "mypy==1.19.1",
    "types-requests==2.32.0.20240907",
    "types-PyYAML==6.0.12.12",
    "pytest==8.4.0",
    "pytest-cov==7.0.0",
    "pytest-mock>=3.0.0,<4.0.0",
    "requests-mock>=1.0.0,<2.0.0",
    "pre-commit==4.3.0",
    "testcontainers==4.13.0",
    "GitPython>=3.0.0,<4.0.0",
    "bs4>=0.0.2",
    "pytest-xdist>=3.8.0",
]

[tool.mypy]
no_incremental = true
ignore_missing_imports = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
disallow_subclassing_any = true
disallow_any_generics = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_unreachable = true
allow_untyped_decorators = true
exclude = [
    "tests/",
    ".tmp/",
    ".venv/",
    "manytask/migrations/versions",
    "checker/tests/",
    "checker/.tmp/"
]


[tool.pyright]
include = ["manytask", "checker/checker"]
exclude = [
    "**/node_modules",
    "**/__pycache__",
    ".venv",
    "venv",
    ".tmp",
    "tests",
    "checker/tests",
    "checker/.tmp"
]


[tool.pytest.ini_options]
minversion = "6.0"
python_files = "test_*.py"
addopts = "--cov=manytask/ --cov-report=term-missing tests/"
testpaths = [
    "tests",
    ".tmp"
]


[tool.ruff]
line-length = 120
target-version = "py312"
src = ["manytask", "tests", "checker/checker"]

# Exclude patterns
exclude = [
    ".bzr",
    ".direnv",
    ".eggs",
    ".git",
    ".git-rewrite",
    ".hg",
    ".mypy_cache",
    ".nox",
    ".pants.d",
    ".pytype",
    ".ruff_cache",
    ".svn",
    ".tox",
    "*.ipynb",
    ".venv",
    "__pypackages__",
    "_build",
    "buck-out",
    "build",
    "dist",
    "node_modules",
    "venv",
    ".tmp",
    "manytask/migrations/versions",
    "checker/tests"
]

[tool.ruff.lint]
# Combine both configurations' rules
select = ["E", "F", "I", "TID252", "TID253", "C901", "PLR"]
ignore = []

# Allow autofix for all enabled rules (when `--fix`) is provided.
fixable = ["ALL"]
unfixable = []

[tool.ruff.lint.mccabe]
# Maximum cyclomatic complexity allowed
max-complexity = 15

[tool.ruff.lint.pylint]
max-nested-blocks = 5
max-args = 7

[tool.ruff.lint.isort]
known-first-party = ["manytask", "tests", "checker"]
