[project]
name = "manytask-mr-reviewer"
version = "0.1.0"
description = "Universal MR review bot for manytask courses"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "redis[hiredis]>=5.2.0",
    "python-gitlab>=7.0.0",
    "httpx>=0.28.0",
    "pydantic>=2.9.0",
    "pydantic-settings>=2.6.0",
    "loguru>=0.7.3",
    "pyyaml>=6.0",
]

[dependency-groups]
dev = [
    "pytest>=9.0.0",
    "pytest-asyncio>=0.25.0",
    "ruff>=0.14.0",
    "mypy>=1.13.0",
    "pre-commit>=4.0.0",
    "fakeredis>=2.26.0",
    "pytest-cov>=6.0.0",
    "types-pyyaml>=6.0",
    "respx>=0.22.0",
    "responses>=0.25.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]

[tool.ruff]
line-length = 120
src = ["app", "tests"]
exclude = [".venv", "build", "dist", "__pycache__"]

[tool.ruff.lint]
extend-select = ["I", "B", "TID252"]

[tool.ruff.lint.isort]
known-first-party = ["app"]

[tool.mypy]
python_version = "3.13"
strict = true
files = ["app", "tests"]
plugins = ["pydantic.mypy"]

[[tool.mypy.overrides]]
module = ["gitlab.*", "responses", "responses.*"]
ignore_missing_imports = true

[tool.pytest.ini_options]
addopts = "-v --color=yes -ra --cov=app.models --cov=app.storage --cov=app.api --cov=app.manytask --cov=app.hosting --cov-report=term-missing"
asyncio_mode = "auto"
testpaths = ["tests"]
markers = ["benchmark: slow performance tests; deselect with '-m \"not benchmark\"'"]
