[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "manytask-checker"
dynamic = ["version"]
description = "Manytask Checker - a framework to test students assignments and to create public repo with tasks but no solutions"
readme = "README.md"
requires-python = ">=3.12,<4.0"
license = {text = "MIT"}
authors = [
    {name = "Manytask Team"}
]
dependencies = [
    "click>=8.0",
    "pyyaml>=6.0",
    "pydantic>=2.0",
    "GitPython>=3.1",
    "jinja2>=3.0",
    "requests>=2.28",
    "urllib3>=1.26",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "ruff>=0.1.0",
]

[project.scripts]
checker = "checker.__main__:cli"

[tool.setuptools]
packages = ["checker", "checker.configs", "checker.plugins", "checker.plugins.cpp"]

[tool.setuptools.dynamic]
version = {file = "VERSION"}
